<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/proficon"
            android:title="@string/MyProfile"

            />
        <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/home"
        android:title="@string/Dashboard" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/home"
            android:title="Admin" />


    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >


        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/Aboutus" />

        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/contactus"
            android:title="@string/contactus" />

        <item
            android:id="@+id/nav_writeus"
            android:icon="@drawable/message"
            android:title="@string/writetous" />


        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />



        <item
            android:id="@+id/share"
            android:icon="@drawable/social_normal"
            android:title="@string/share"
            app:showAsAction="always" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />


</group>

</menu>
