<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <com.project.EarthFoundation.CustomTextView
        android:id="@+id/txtFrom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:hint="From" />
    <com.project.EarthFoundation.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:hint="@string/suggesion" />

    <com.project.EarthFoundation.CustomTextView
        android:id="@+id/txtTo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="To"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/txtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:singleLine="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/msg"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/primary_darker"
        android:layout_marginBottom="10dp"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:text="@string/send" />
</LinearLayout>